--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1330,5 +1330,91 @@ strong {
     display: none !important;
   }
 }
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 60px;
+  padding: 0 20px;
+  border-radius: 6px;
+  background: var(--color-4);
+  font-size: 18px;
+  font-weight: 600;
+  white-space: nowrap;
+  user-select: none;
+}
+.btn--small {
+  height: 36px;
+}
+.btn + .btn:not(.btn--no-margin) {
+  margin-left: 20px;
+}
+.btn--primary {
+  color: #fff;
+  background: var(--color-primary);
+}
+
+.color {
+  --color-primary: #572af8;
+  --color-like: #29b067;
+  --color-warning: #f05e36;
+  --color-4: #ffcf54;
+  --color-5: #191720;
+  --color-6: #575363;
+  --color-bg: #fffae3;
+  --color-8: #e8e6ed;
+}
+
+.section__heading--lv1 {
+  font-size: 74px;
+  line-height: 1;
+  font-weight: 600;
+}
+
+.section__heading--lv2 {
+  font-size: 44px;
+  line-height: 1;
+  font-weight: 600;
+}
+
+.section__heading--lv3 {
+  font-size: 30px;
+  line-height: 1.33%;
+  font-weight: 700;
+}
+
+.section__heading--lv4 {
+  font-size: 26px;
+  line-height: 1.38%;
+  font-weight: 600;
+}
+
+.section__heading--lv5 {
+  font-size: 20px;
+  line-height: 1.5%;
+  font-weight: 700;
+}
+
+.section__heading--lv6 {
+  font-size: 20px;
+  line-height: 1.5%;
+  font-weight: 600;
+}
+
+.section__desc--lager {
+  font-size: 18px;
+  line-height: 1.66%;
+}
+
+.section__desc--medium {
+  font-size: 16px;
+  line-height: 1.75%;
+}
+
+.section__desc--small {
+  font-size: 14px;
+  line-height: 1.71%;
+}
 
 /*# sourceMappingURL=main.css.map */
