--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,6 +7,17 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+:root {
+    --color-primary: #572af8;
+    --color-like: #29b067;
+    --color-warning: #f05e36;
+    --color-4: #ffcf54;
+    --color-text: #191720;
+    --color-6: #575363;
+    --color-bg: #fffae3;
+    --color-8: #e8e6ed;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -14,6 +25,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: Manrope, sans-serif;
+    color: var(--color-text);
 }
 
 a {
