--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,11 +6,10 @@
 .top-bar {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .navbar {
-    margin-left: 292px;
-    margin-right: auto;
     &__list {
         display: flex;
     }
