--- a/templates/header.html
+++ b/templates/header.html
@@ -16,8 +16,13 @@
             DEAST
         </h1>
 
+        <!-- Menu -->
+        <div class="menu d-none d-md-block">
+            <img src="./assets/icons/menu.svg" alt="" />
+        </div>
+
         <!-- Navbar -->
-        <nav class="navbar">
+        <nav class="navbar d-md-none">
             <ul class="navbar__list">
                 <li>
                     <a href="#!" class="navbar__link">Get the app</a>
@@ -35,7 +40,7 @@
         </nav>
 
         <!-- Action -->
-        <div class="top-act">
+        <div class="top-act d-md-none">
             <button>Sign In</button>
             <button class="top-act__sign-up btn btn--primary">Sign Up</button>
         </div>
