--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,8 +148,8 @@ table {
   --color-like: #29b067;
   --color-warning: #f05e36;
   --color-4: #ffcf54;
-  --color-text: #191720;
-  --color-6: #575363;
+  --color-5: #191720;
+  --color-text: #575363;
   --color-bg: #fffae3;
   --color-8: #e8e6ed;
 }
@@ -209,6 +209,15 @@ input:-webkit-autofill:hover {
 h1,
 h2 {
   font-family: RobotoSerif, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-5);
 }
 
 i,
@@ -1347,12 +1356,14 @@ strong {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  min-width: 166px;
   height: 60px;
   padding: 0 20px;
   border-radius: 6px;
   background: var(--color-4);
   font-size: 18px;
   font-weight: 600;
+  color: #fff !important;
   white-space: nowrap;
   user-select: none;
 }
@@ -1363,8 +1374,10 @@ strong {
   margin-left: 20px;
 }
 .btn--primary {
-  color: #fff;
   background: var(--color-primary);
+}
+.btn--black {
+  background: var(--color-5);
 }
 
 .logo {
@@ -1406,6 +1419,89 @@ strong {
   height: 44px;
 }
 
+.footer {
+  padding: 100px 0 30px;
+  background: var(--color-bg);
+  color: var(--color-6);
+}
+@media (max-width: 991.98px) {
+  .footer {
+    padding-top: 50px;
+  }
+}
+.footer__row {
+  display: grid;
+  grid-template-columns: 2.5fr 1.2fr 1fr 1fr 1fr;
+}
+@media (max-width: 991.98px) {
+  .footer__row {
+    grid-template-columns: 1fr;
+  }
+}
+.footer__desc {
+  margin: 12px 0 20px;
+  width: 270px;
+  line-height: 1.75;
+}
+.footer__social {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 30px;
+}
+.footer .logo {
+  color: var(--color-text);
+}
+.footer__heading {
+  margin-bottom: 16px;
+  font-size: 2rem;
+  line-height: 1.5;
+  font-weight: 700;
+  color: var(--color-text);
+}
+.footer__link {
+  display: inline-block;
+  padding: 8px 0;
+  line-height: 1.75;
+}
+.footer__separate {
+  margin: 55px 0 30px;
+  height: 1.5px;
+  background: var(--color-6);
+}
+.footer__copyright {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+@media (max-width: 991.98px) {
+  .footer__copyright {
+    flex-direction: column;
+  }
+}
+.footer__copyright--right {
+  display: flex;
+  gap: 30px;
+}
+@media (max-width: 991.98px) {
+  .footer__copyright--right {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+
+.section__heading {
+  max-width: 470px;
+  font-size: 4.4rem;
+  font-weight: 600;
+}
+
+.section__desc {
+  max-width: 470px;
+  margin-top: 18px;
+  font-size: 1.8rem;
+  line-height: 1.66;
+}
+
 .hero {
   padding: 52px 10px 100px;
   background: var(--color-bg);
@@ -1427,15 +1523,12 @@ strong {
   font-size: 1.8rem;
   line-height: 1.66;
 }
-.hero__media {
-  height: 594px;
-}
 .hero__img {
   position: relative;
   right: -24px;
   padding-top: 89%;
 }
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .hero__img {
     right: 0;
   }
@@ -1514,68 +1607,483 @@ strong {
   object-fit: cover;
 }
 
-.footer {
-  padding: 100px 0 30px;
-  background: var(--color-bg);
-  color: var(--color-6);
-}
-.footer__row {
-  display: grid;
-  grid-template-columns: 2.5fr 1.2fr 1fr 1fr 1fr;
+.service {
+  margin: 160px 0;
+  text-align: center;
 }
 @media (max-width: 991.98px) {
-  .footer__row {
-    grid-template-columns: 1fr;
+  .service {
+    margin: 70px 0;
   }
 }
-.footer__desc {
-  margin: 12px 0 20px;
-  width: 270px;
-  line-height: 1.75;
-}
-.footer__social {
+.service__top {
   display: flex;
-  gap: 12px;
-  margin-bottom: 30px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.footer .logo {
-  color: var(--color-text);
+.service__list {
+  margin-top: 55px;
 }
-.footer__heading {
-  margin-bottom: 16px;
-  font-size: 2rem;
-  line-height: 1.5;
-  font-weight: 700;
-  color: var(--color-text);
+@media (max-width: 991.98px) {
+  .service__list {
+    margin-top: 30px;
+  }
 }
-.footer__link {
-  display: inline-block;
-  padding: 8px 0;
-  line-height: 1.75;
+.service__item {
+  padding: 30px 20px;
 }
-.footer__separate {
-  margin: 55px 0 30px;
-  height: 1.5px;
-  background: var(--color-6);
+@media (max-width: 991.98px) {
+  .service__item {
+    box-shadow: 0px 20px 70px 0px rgba(27, 12, 84, 0.07);
+  }
 }
-.footer__copyright {
+.service__item:hover {
+  box-shadow: 0px 20px 70px 0px rgba(27, 12, 84, 0.07);
+}
+.service__item:hover > .service__link {
+  color: var(--color-primary);
+}
+.service__img {
+  width: 100px;
+  height: 100px;
+}
+.service__title {
+  margin-top: 20px;
+  font-size: 2.6rem;
+  line-height: 1.38;
+  font-weight: 600;
+}
+.service__desc {
+  margin-top: 12px;
+}
+.service__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  font-size: 1.8rem;
+  line-height: 1.66;
+  font-weight: 600;
+  color: var(--color-5);
+}
+
+.about {
+  padding: 200px 0 100px;
+  background: var(--color-bg);
+}
+@media (max-width: 991.98px) {
+  .about {
+    margin-top: 70px;
+    padding: 50px 0;
+  }
+}
+.about-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media (max-width: 991.98px) {
+  .about-inner {
+    flex-direction: column-reverse;
+  }
+}
+.about-media {
+  position: relative;
+  padding-top: 95%;
+}
+.about-media__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.about-content {
+  margin-bottom: 50px;
+}
+.about-content__link {
+  margin-top: 38px;
+  max-width: 166px;
+}
+
+.countdown {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  margin-bottom: -100px;
+  padding: 55px 0;
+  border-radius: 12px;
+  background: var(--color-5);
+}
+@media (max-width: 1199.98px) {
+  .countdown {
+    gap: 70px;
+  }
+}
+@media (max-width: 991.98px) {
+  .countdown {
+    gap: 50px;
+  }
+}
+@media (max-width: 991.98px) {
+  .countdown {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+}
+.countdown::before {
+  content: url(../../assets/icons/pizza-25.svg);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.countdown::after {
+  content: url(../../assets/icons/leaf.svg);
+  position: absolute;
+  top: 50%;
+  right: 0;
+  translate: 0 -50%;
+}
+@media (max-width: 991.98px) {
+  .countdown::after {
+    top: initial;
+    bottom: 30px;
+    translate: 0 0;
+  }
+}
+.countdown__price {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 18px;
+  color: #fff;
+}
+.countdown__price--title {
+  font-family: RobotoSerif, sans-serif;
+  font-size: 4.4rem;
+  font-weight: 600;
+}
+.countdown__price--value {
+  font-size: 1.8rem;
+  line-height: 1.66;
+}
+
+.feature__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 55px;
+  padding: 48px;
+}
+@media (max-width: 991.98px) {
+  .feature__item {
+    margin-top: 30px;
+    padding: 30px 12px;
+  }
+}
+.feature__item:hover {
+  box-shadow: 0px 20px 70px 0px rgba(27, 12, 84, 0.07);
+}
+.feature__item:hover > .feature__link {
+  background: var(--color-primary);
+}
+.feature__title {
+  margin-top: 38px;
+  font-size: 2.6rem;
+  line-height: 1.38;
+  font-weight: 600;
+}
+.feature__thumb {
+  position: relative;
+  padding-top: 47%;
+  width: 65%;
+}
+.feature__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.feature__link {
+  margin-top: 38px;
+}
+
+@media (max-width: 991.98px) {
+  .feed-inner {
+    flex-direction: column;
+  }
+}
+.feed__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 18px 0 38px 26px;
+  list-style: inherit;
+}
+.feed-content__link {
+  max-width: 212px;
+}
+
+.flavour {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 160px;
+  height: 695px;
+  background: var(--color-4);
+  text-align: center;
+}
+@media (max-width: 1199.98px) {
+  .flavour {
+    height: 615px;
+  }
+}
+@media (max-width: 991.98px) {
+  .flavour {
+    margin-top: 70px;
+    height: 470px;
+  }
+}
+@media (max-width: 991.98px) {
+  .flavour {
+    height: 410px;
+  }
+}
+.flavour-content {
+  margin-top: 100px;
+}
+@media (max-width: 991.98px) {
+  .flavour-content {
+    margin-top: 50px;
+  }
+}
+.flavour__desc {
+  color: var(--color-5);
+}
+.flavour-media {
+  position: absolute;
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  top: 144px;
+  padding: 0 25px;
+  width: 100%;
+}
+
+.cta-bg {
+  background: var(--color-bg);
+}
+
+.ip-review {
+  position: relative;
+  display: flex;
+  gap: 30px;
+  margin-top: -32%;
 }
 @media (max-width: 991.98px) {
-  .footer__copyright {
+  .ip-review {
+    gap: 9px;
+  }
+}
+.ip-review__thumb {
+  position: relative;
+  padding-top: 64%;
+  flex: 1;
+}
+.ip-review__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.app {
+  margin-top: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+@media (max-width: 767.98px) {
+  .app {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 767.98px) {
+  .app {
     flex-direction: column;
   }
 }
-.footer__copyright--right {
-  display: flex;
-  gap: 30px;
+
+.blq {
+  margin-top: 160px;
+  padding-bottom: 160px;
 }
 @media (max-width: 991.98px) {
-  .footer__copyright--right {
+  .blq {
+    margin-top: 70px;
+    padding-bottom: 50px;
+  }
+}
+.blq-content {
+  display: flex;
+  overflow: hidden;
+}
+.blq__row {
+  display: flex;
+  gap: 30px;
+  width: 100%;
+  flex-shrink: 0;
+}
+.blq-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.blq__item {
+  position: relative;
+  margin-top: 69px;
+  padding: 30px 20px;
+  border-radius: 12px;
+  background: #fff;
+}
+.blq__item:hover > .blq__icon,
+.blq__item:hover .blq__name {
+  filter: brightness(0) saturate(100%) invert(13%) sepia(99%) saturate(5327%) hue-rotate(256deg) brightness(100%) contrast(95%);
+  color: var(--color-primary);
+}
+.blq__icon {
+  position: absolute;
+  top: -14px;
+  left: 20px;
+}
+.blq-list__icon-bt {
+  margin-top: -50px;
+  justify-content: center;
+}
+@media (max-width: 767.98px) {
+  .blq-list__icon-bt {
+    margin-top: -110px;
+  }
+}
+.blq__ctm {
+  margin-top: 16px;
+  font-size: 1.8rem;
+  line-height: 1.66;
+}
+.blq-separate {
+  margin: 20px 0;
+  height: 1px;
+  background: var(--color-primary);
+  opacity: 0.2;
+}
+.blq__name {
+  color: var(--color-5);
+  font-size: 2rem;
+  line-height: 1.5;
+  font-weight: 600;
+}
+.blq__ai {
+  font-size: 1.4rem;
+  line-height: 1.71;
+}
+
+.nwl {
+  position: relative;
+  z-index: 1;
+  padding: 100px 0;
+  background: var(--color-like);
+  color: #fff;
+}
+@media (max-width: 991.98px) {
+  .nwl {
+    padding: 50px 0;
+  }
+}
+.nwl::before {
+  content: url(../../assets/icons/big-hamburge.svg);
+  position: absolute;
+  top: -132px;
+  left: 0;
+}
+@media (max-width: 991.98px) {
+  .nwl::before {
+    display: none;
+  }
+}
+.nwl::after {
+  content: url(../../assets/icons/big-pizza.svg);
+  position: absolute;
+  top: 100px;
+  right: 0;
+}
+@media (max-width: 991.98px) {
+  .nwl::after {
+    display: none;
+  }
+}
+.nwl__inner {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.nwl__img {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.nwl__heading {
+  color: inherit;
+}
+.nwl__form {
+  width: 100%;
+}
+.nwl__form-info {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+}
+@media (max-width: 991.98px) {
+  .nwl__form-info {
     flex-direction: column;
-    gap: 20px;
+  }
+}
+.nwl__form-row {
+  width: 384px;
+  height: 60px;
+}
+@media (max-width: 991.98px) {
+  .nwl__form-row {
+    width: 100%;
+  }
+}
+.nwl__form-input {
+  width: 100%;
+  height: 100%;
+  padding: 0 15px;
+  border-radius: 6px;
+  background: #fff;
+  color: var(--color-5);
+}
+@media (max-width: 991.98px) {
+  .nwl__form-btn {
+    width: 100%;
   }
 }
 
