--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,6 +5,10 @@
     background: var(--color-bg);
     color: var(--color-6);
 
+    @include abstracts.screen(lg) {
+        padding-top: 50px;
+    }
+
     &__row {
         display: grid;
         grid-template-columns: 2.5fr 1.2fr 1fr 1fr 1fr;
