--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,20 +3,22 @@
         <!-- Footer column 1 -->
         <div class="footer__col">
             <!-- Logo -->
-            <h1 class="logo">
-                F
-                <img
-                    class="logo__thumb"
-                    src="./assets/img/logo/logo-1.png"
-                    alt=""
-                />
-                <img
-                    class="logo__thumb"
-                    src="./assets/img/logo/logo-2.png"
-                    alt=""
-                />
-                DEAST
-            </h1>
+            <a href="/">
+                <h1 class="logo">
+                    F
+                    <img
+                        class="logo__thumb"
+                        src="./assets/img/logo/logo-1.png"
+                        alt=""
+                    />
+                    <img
+                        class="logo__thumb"
+                        src="./assets/img/logo/logo-2.png"
+                        alt=""
+                    />
+                    DEAST
+                </h1>
+            </a>
 
             <p class="footer__desc">
                 Food, drinks, groceries, and more available for delivery and
