--- a/templates/header.html
+++ b/templates/header.html
@@ -1,20 +1,22 @@
 <div class="container">
     <div class="top-bar">
         <!-- Logo -->
-        <h1 class="logo">
-            F
-            <img
-                class="logo__thumb"
-                src="./assets/img/logo/logo-1.png"
-                alt=""
-            />
-            <img
-                class="logo__thumb"
-                src="./assets/img/logo/logo-2.png"
-                alt=""
-            />
-            DEAST
-        </h1>
+        <a href="/">
+            <h1 class="logo">
+                F
+                <img
+                    class="logo__thumb"
+                    src="./assets/img/logo/logo-1.png"
+                    alt=""
+                />
+                <img
+                    class="logo__thumb"
+                    src="./assets/img/logo/logo-2.png"
+                    alt=""
+                />
+                DEAST
+            </h1>
+        </a>
 
         <!-- Menu -->
         <div class="menu d-none d-md-block">
