làm phần sign-in sign-up

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1377,6 +1377,9 @@ strong {
 .btn--primary {
   background: var(--color-primary);
 }
+.btn--text {
+  background: transparent;
+}
 .btn--black {
   background: var(--color-5);
 }
@@ -1447,7 +1450,8 @@ strong {
 }
 @media (max-width: 767.98px) {
   .modal__content {
-    width: 340px;
+    width: 100%;
+    height: 100%;
   }
 }
 .modal__thumb {
@@ -1522,9 +1526,26 @@ strong {
   color: var(--color-like);
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.form__input {
+  padding: 0 15px;
+  width: 100%;
+  height: 50px;
+  border: 1px solid var(--color-5);
+  border-radius: 6px;
+  color: var(--color-5);
+}
+.form__link {
+  align-self: flex-end;
+}
+
 .header {
   position: sticky;
-  z-index: 98;
+  z-index: 90;
   background: var(--color-bg);
   padding: 37px 0 10px;
   top: -27px;
@@ -1551,12 +1572,19 @@ strong {
 
 .top-act {
   display: flex;
-  gap: 30px;
+  align-items: center;
+}
+.top-act__sign-in {
+  font-size: initial;
+  color: var(--color-5) !important;
+  padding: 0 15px;
+  min-width: 0;
 }
 .top-act__sign-up {
   font-size: inherit;
   min-width: 107px;
   height: 44px;
+  margin-left: 15px;
 }
 
 .footer {
@@ -1682,21 +1710,21 @@ strong {
   object-fit: contain;
 }
 
-.form-input {
+.home-form-input {
   display: flex;
   align-items: center;
   gap: 16px;
   margin-top: 38px;
 }
 @media (max-width: 767.98px) {
-  .form-input {
+  .home-form-input {
     flex-direction: column;
   }
 }
-.form-input__icon {
+.home-form-input__icon {
   margin: 0 12px 0 16px;
 }
-.form__row {
+.home-form__row {
   display: flex;
   align-items: center;
   width: 100%;
@@ -1705,20 +1733,20 @@ strong {
   border-radius: 6px;
   background: #fff;
 }
-.form__input {
+.home-form__input {
   padding: 0 12px 0 0;
   width: 100%;
   height: 100%;
 }
-.form__btn {
+.home-form__btn {
   min-width: 135px;
 }
-.form__btn:hover {
+.home-form__btn:hover {
   opacity: 0.9;
   cursor: pointer;
 }
 @media (max-width: 767.98px) {
-  .form__btn {
+  .home-form__btn {
     width: 100%;
   }
 }
@@ -2239,6 +2267,83 @@ strong {
   .nwl__form-btn {
     width: 100%;
   }
+}
+
+.sign-up__overlay, .sign-up {
+  position: fixed;
+  inset: 0;
+}
+
+.sign-up {
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sign-up__content {
+  position: relative;
+  z-index: 99;
+  padding: 15px 20px;
+  border-radius: 12px;
+  background: #fff;
+  overflow-y: auto;
+}
+@media (max-width: 767.98px) {
+  .sign-up__content {
+    width: 90%;
+    height: 80%;
+  }
+}
+.sign-up__overlay {
+  z-index: 98;
+  background: var(--color-5);
+  opacity: 0.5;
+}
+.sign-up__heading {
+  font-size: 2.6rem;
+  line-height: 1.38;
+  font-weight: 600;
+  text-align: center;
+}
+.sign-up__continue {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+.sign-up__or {
+  margin: 20px 0;
+  text-align: center;
+}
+.sign-up__link {
+  display: block;
+  margin-top: 20px;
+  text-align: center;
+}
+.sign-up__link--bold {
+  font-weight: 600;
+  color: var(--color-5);
+}
+
+.log-in {
+  display: flex;
+  align-items: center;
+  width: 370px;
+  height: 50px;
+  border: 1px solid var(--color-5);
+  border-radius: 6px;
+}
+@media (max-width: 767.98px) {
+  .log-in {
+    width: 100%;
+  }
+}
+.log-in__icon {
+  margin-left: 15px;
+}
+.log-in__title {
+  margin: 0 auto;
+  padding-right: 8%;
 }
 
 /*# sourceMappingURL=main.css.map */
