--- a/templates/header.html
+++ b/templates/header.html
@@ -43,8 +43,14 @@
 
         <!-- Action -->
         <div class="top-act d-md-none">
-            <button>Sign In</button>
-            <button class="top-act__sign-up btn btn--primary">Sign Up</button>
+            <a href="./sign-in.html" class="top-act__sign-in btn btn--text"
+                >Sign In</a
+            >
+            <a
+                href="./sign-up.html"
+                class="top-act__sign-up btn btn--primary btn--no-margin"
+                >Sign Up</a
+            >
         </div>
     </div>
 </div>
