--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -61,7 +61,8 @@
         }
 
         @include abstracts.screen(md) {
-            width: 340px;
+            width: 100%;
+            height: 100%;
         }
 
         border-radius: 12px;
