--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,7 +2,7 @@
 
 .header {
     position: sticky;
-    z-index: 98;
+    z-index: 90;
     background: var(--color-bg);
     padding: 37px 0 10px;
     top: -27px;
@@ -31,11 +31,19 @@
 
 .top-act {
     display: flex;
-    gap: 30px;
+    align-items: center;
+
+    &__sign-in {
+        font-size: initial;
+        color: var(--color-5) !important;
+        padding: 0 15px;
+        min-width: 0;
+    }
 
     &__sign-up {
         font-size: inherit;
         min-width: 107px;
         height: 44px;
+        margin-left: 15px;
     }
 }
