--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1547,14 +1547,8 @@ strong {
   position: sticky;
   z-index: 90;
   background: var(--color-bg);
-  padding: 37px 0 10px;
-  top: -27px;
-}
-@media (max-width: 991.98px) {
-  .header {
-    padding-bottom: 20px;
-    top: -17px;
-  }
+  padding: 20px 0;
+  top: 0;
 }
 
 .top-bar {
@@ -1579,6 +1573,7 @@ strong {
   color: var(--color-5) !important;
   padding: 0 15px;
   min-width: 0;
+  height: inherit;
 }
 .top-act__sign-up {
   font-size: inherit;
@@ -2344,6 +2339,50 @@ strong {
 .log-in__title {
   margin: 0 auto;
   padding-right: 8%;
+}
+
+.co-soon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+.co-soon__thumb {
+  position: relative;
+  left: 50%;
+  translate: -50% 0;
+  padding-top: 56%;
+  max-width: 318px;
+}
+.co-soon__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.co-soon__heading {
+  margin-top: 38px;
+}
+.co-soon__heading, .co-soon__desc {
+  padding: 0 15px;
+  max-width: 570px;
+  text-align: center;
+}
+.co-soon__social {
+  justify-content: center;
+  margin-top: 38px;
+}
+
+.go-to-home {
+  display: flex;
+  justify-content: center;
+  margin-top: 38px;
+}
+.go-to-home__btn {
+  min-width: 172px;
 }
 
 /*# sourceMappingURL=main.css.map */
