--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -62,6 +62,10 @@ textarea {
     background: transparent;
 }
 
+textarea {
+    resize: none;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active,
