--- a/scss/pages/_logined.scss
+++ b/scss/pages/_logined.scss
@@ -12,6 +12,16 @@
     align-items: center;
     justify-content: center;
 
+    opacity: 1;
+    visibility: visible;
+
+    &.hide {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity, visibility;
+        transition-duration: 0.3s;
+    }
+
     &__content {
         position: relative;
         z-index: 99;
