--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,85 @@
 
         <!-- Menu -->
         <div class="menu d-none d-md-block">
-            <img src="./assets/icons/menu.svg" alt="" />
+            <img
+                src="./assets/icons/menu.svg"
+                alt=""
+                class="menu__icon js-toggle"
+                toggle-target="#hidden-menu"
+            />
+
+            <div id="hidden-menu" class="menu-inner hide">
+                <ul class="navbar__list">
+                    <li>
+                        <a href="./sign-up.html" class="navbar__link"
+                            >Sign up</a
+                        >
+                    </li>
+                    <li>
+                        <a href="./sign-in.html" class="navbar__link"
+                            >Sign in</a
+                        >
+                    </li>
+
+                    <li>
+                        <a href="#!" class="navbar__link">Get the app</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="navbar__link">About</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="#!" class="navbar__link">
+                            Page
+                            <img
+                                src="./assets/icons/arrow-down.svg"
+                                alt=""
+                                class="navbar__link-icon"
+                            />
+                        </a>
+                        <div class="showdown">
+                            <div class="showdown__inner">
+                                <ul class="showdown__list">
+                                    <li>
+                                        <a
+                                            href="./blog.html"
+                                            class="showdown__link"
+                                            >Blog</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="./faq.html"
+                                            class="showdown__link"
+                                            >FAQ</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="./contact.html"
+                                            class="showdown__link"
+                                            >Contact</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="./404.html"
+                                            class="showdown__link"
+                                            >404 Page</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="./coming-soon.html"
+                                            class="showdown__link"
+                                            >Coming Soon</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <!-- Navbar -->
@@ -32,11 +110,46 @@
                 <li>
                     <a href="#!" class="navbar__link">About</a>
                 </li>
-                <li>
+                <li class="navbar__item">
                     <a href="#!" class="navbar__link">
                         Page
                         <img src="./assets/icons/arrow-down.svg" alt="" />
                     </a>
+                    <div class="showdown">
+                        <div class="showdown__inner">
+                            <ul class="showdown__list">
+                                <li>
+                                    <a href="./blog.html" class="showdown__link"
+                                        >Blog</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="./faq.html" class="showdown__link"
+                                        >FAQ</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="./contact.html"
+                                        class="showdown__link"
+                                        >Contact</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="./404.html" class="showdown__link"
+                                        >404 Page</a
+                                    >
+                                </li>
+                                <li>
+                                    <a
+                                        href="./coming-soon.html"
+                                        class="showdown__link"
+                                        >Coming Soon</a
+                                    >
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </nav>
