--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -42,6 +42,10 @@
         line-height: 1.5;
         font-weight: 700;
         color: var(--color-text);
+
+        @include abstracts.screen(lg) {
+            margin: 10px 0;
+        }
     }
 
     &__link {
@@ -55,6 +59,10 @@
         margin: 55px 0 30px;
         height: 1.5px;
         background: var(--color-6);
+
+        @include abstracts.screen(lg) {
+            margin: 30px 0 0;
+        }
     }
 
     &__copyright {
