--- a/templates/header.html
+++ b/templates/header.html
@@ -108,7 +108,7 @@
                     <a href="#!" class="navbar__link">Get the app</a>
                 </li>
                 <li>
-                    <a href="#!" class="navbar__link">About</a>
+                    <a href="./about.html" class="navbar__link">About</a>
                 </li>
                 <li class="navbar__item">
                     <a href="#!" class="navbar__link">
